// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Form Group Compact 1`] = `
<div
  class="fd-form-group"
>
  
        
  <div
    class="fd-form-item"
  >
    
            
    <label
      class="fd-form-label"
      for="input-1b"
    >
      Compact Input:
    </label>
    
            
    <input
      class="fd-input fd-input--compact"
      id="input-1b"
      placeholder="Field placeholder text"
      type="text"
    />
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Components/Forms/Form Group Default 1`] = `
<div
  class="fd-form-group"
>
  
        
  <div
    class="fd-form-item"
  >
    
            
    <label
      class="fd-form-label"
      for="input-1"
    >
      Default input:
    </label>
    
            
    <input
      class="fd-input"
      id="input-1"
      placeholder="Field placeholder text"
      type="text"
    />
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Components/Forms/Form Group Required 1`] = `
<div
  class="fd-form-group"
>
  
        
  <div
    class="fd-form-item"
  >
    
            
    <label
      class="fd-form-label fd-form-label--required"
      for="input-1c"
    >
      Required Input:
    </label>
    
            
    <input
      class="fd-input"
      id="input-1c"
      placeholder="Field placeholder text"
      type="text"
    />
    
        
  </div>
  
    
</div>
`;
